src/snapshots/bvr__tui__tests__snap_label_dashboard_narrow.snap
---
source: src/tui.rs
expression: text
---
No labels found




























 📋 ALL  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1     3 issues  j/k nav
