src/snapshots/bvr__tui__tests__snap_label_picker_overlay.snap
---
source: src/tui.rs
expression: text
---
┌Label Picker──────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│  ▸ core                     (1 issues)                                                           │
│    parity                   (1 issues)                                                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Type to filter | ↑/↓=navigate | Enter=apply | Esc=close
