src/snapshots/bvr__tui__tests__snap_main_narrow.snap
---
source: src/tui.rs
expression: text
---
┌──────────────────────────────────────────────────────────┐
│  TYPE PRI STATUS      ID                                 │
│▸ 📋 P0 🔓1 OPEN A Root                                   │
│  📋 P0 OPEN B Dependent                                  │
│  📋 P0 DONE C Closed                                     │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                             Page 1 of 1 (items 1-3 of 3) │
└──────────────────────────────────────────────────────────┘
 📋 ALL  L:labels • h:detail  ○2 ◉1 ◈0 ●1
