src/snapshots/bvr__tui__tests__snap_main_wide.snap
---
source: src/tui.rs
expression: text
---
┌───────────────────────────────────────────────────┐┌─────────────────────────────────────────────────────────────────────────────────────┐
│  TYPE PRI STATUS      ID                          ││ 📋 Root                                                                             │
│▸ 📋 P0 🔓1 OPEN A Root                            ││                                                                                     │
│  📋 P0 OPEN B Dependent                           ││ ┌────┬────────┬──────────┬──────────┬────────────┐                                  │
│  📋 P0 DONE C Closed                              ││ │ ID │ Status │ Priority │ Assignee │ Created    │                                  │
│                                                   ││ ├────┼────────┼──────────┼──────────┼────────────┤                                  │
│                                                   ││ │ A  │ OPEN   │ 🔥 P0    │ @alice   │ 2026-01-01 │                                  │
│                                                   ││ └────┴────────┴──────────┴──────────┴────────────┘                                  │
│                                                   ││                                                                                     │
│                                                   ││ Labels: core, parity                                                                │
│                                                   ││ C copy id • L label filter • w repo filter • t time-travel                          │
│                                                   ││                                                                                     │
│                                                   ││ 🎯 Triage Insights                                                                  │
│                                                   ││ • 🔓 Unblocks: 1 downstream items when completed                                    │
│                                                   ││                                                                                     │
│                                                   ││ Graph Analysis                                                                      │
│                                                   ││ • Impact Depth: 2 (downstream chain length)                                         │
│                                                   ││ • Centrality: PR 0.4805 • BW 0.0000 • EV 1.0000                                     │
│                                                   ││ • Flow Role: Hub 0.0000 • Authority 1.0000                                          │
│                                                   ││                                                                                     │
│                                                   ││ Description                                                                         │
│                                                   ││                                                                                     │
│                                                   ││ Top-level issue that unblocks downstream work once the shared baseline is solid.    │
│                                                   ││                                                                                     │
│                                                   ││ Design Notes                                                                        │
│                                                   ││                                                                                     │
│                                                   ││ Keep the main flow lean, surface the most important context first, and let          │
│                      Page 1 of 1 (items 1-3 of 3) ││ supporting sections trail after the summary.                                        │
└───────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────┘
 📋 ALL  L:labels • h:detail  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1                      3 issues  tab focus │ C copy │ x export │ / search │ ? help
