src/snapshots/bvr__tui__tests__snap_main_with_priority_hints.snap
---
source: src/tui.rs
expression: text
---
┌────────────────────────────────────────┐┌────────────────────────────────────────────────────────┐
│  TYPE PRI STATUS      ID               ││ ✨ Feature work                                        │
│▸ ✨ P1 OPEN A Feature work             ││                                                        │
│  🐛 P2 OPEN B Bug fix                  ││ ┌────┬────────┬──────────┬──────────┬─────────┐        │
│  📋 P3 OPEN C UI polish                ││ │ ID │ Status │ Priority │ Assignee │ Created │        │
│                                        ││ ├────┼────────┼──────────┼──────────┼─────────┤        │
│                                        ││ │ A  │ OPEN   │ ⚡ P1    │ —        │ —       │        │
│                                        ││ └────┴────────┴──────────┴──────────┴─────────┘        │
│                                        ││                                                        │
│                                        ││ Labels: backend, urgent                                │
│                                        ││ C copy id • L label filter • w repo filter • t         │
│                                        ││ time-travel                                            │
│                                        ││                                                        │
│                                        ││ Graph Analysis                                         │
│                                        ││ • Impact Depth: 1 (downstream chain length)            │
│                                        ││ • Centrality: PR 0.3333 • BW 0.0000 • EV 0.5774        │
│                                        ││ • Flow Role: Hub 0.0000 • Authority 0.0000             │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│           Page 1 of 1 (items 1-3 of 3) ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
 📋 ALL  L:labels • h:detail  ○3 ◉3 ◈0 ●0        3 issues  tab focus │ C copy │ x export │ / search
