src/snapshots/bvr__tui__tests__snap_quit_confirm_modal.snap
---
source: src/tui.rs
expression: text
---
┌Confirm Quit──────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│ Quit bvr?                                                                                        │
│                                                                                                  │
│ Press Esc or Y to quit.                                                                          │
│ Press any other key to cancel.                                                                   │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Esc/Y confirms quit. Any other key cancels.
