src/snapshots/bvr__tui__tests__snap_recipe_picker_overlay.snap
---
source: src/tui.rs
expression: text
---
┌Recipe Picker─────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│  ▸ actionable       Issues ready to work on (no open blockers)                                   │
│    blocked          Issues waiting on dependencies                                               │
│    default          All open issues sorted by priority                                           │
│    high-impact      Issues with highest graph centrality                                         │
│    quick-wins       Easy low-priority actionable items                                           │
│    stale            Issues not updated in 30+ days                                               │
│    triage           Sorted by computed triage score                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
j/k=navigate | Enter=apply | Esc=close
