src/snapshots/bvr__tui__tests__snap_sprint_detail_focus.snap
---
source: src/tui.rs
expression: text
---
          ┌──────────────────────────────────────────────────────────────────────────────┐
          │                                                                              │
          │  📅 Sprint: Sprint Alpha                                                     │
          │                                                                              │
          │  Dates:    Mar 2 → Mar 16                                                    │
          │  Remaining: 7 days                                                           │
          │                                                                              │
          │  Progress: ████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 1/3 (33%)      │
          │  Status:   ✓1 ⏳0 ⛔0 ○2                                                     │
          │                                                                              │
          │  Burndown:                                                                   │
          │    ···                                                                       │
          │    ●·····●●                                                                  │
          │    ●●●·····                                                                  │
          │          ·····                                                               │
          │             ·····                                                            │
          │    ───────────────                                                           │
          │    · ideal  ● actual                                                         │
          │                                                                              │
          │  At Risk:                                                                    │
          │    ⚠ A - Root (no_activity)                                                  │
          │    ⚠ B - Dependent (blocked_too_long, no_activity, critical_blocked, block…  │
          │                                                                              │
          │  Beads in Sprint:                                                            │
          │    ○ A - Root                                                                │
          │    ○ B - Dependent                                                           │
          │    ✓ C - Closed                                                              │
          │                                                                              │
          └──────────────────────────────────────────────────────────────────────────────┘
 📋 ALL  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1                  3 issues  j/k sprint │ ^j/k scroll │ S close
