src/snapshots/bvr__tui__tests__snap_sprint_medium.snap
---
source: src/tui.rs
expression: text
---
          ┌──────────────────────────────────────────────────────────────────────────────┐
          │                                                                              │
          │  📅 Sprints                                                                  │
          │                                                                              │
          │  No sprints defined (.beads/sprints.jsonl)                                   │
          │                                                                              │
          │  Each line: {"id":"sprint-1","name":"Sprint Alpha",                          │
          │    "start_date":"…","end_date":"…","bead_ids":[…]}                           │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          │                                                                              │
          └──────────────────────────────────────────────────────────────────────────────┘
 📋 ALL  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1                  3 issues  j/k sprint │ ^j/k scroll │ S close
